--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+
+/* Universal selector */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,6 +10,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* setting space between h1 & nav boxes */
 header {
     display: flex;
     justify-content: space-between;
@@ -21,10 +24,12 @@ h1 {
     font-size: 48px;
 }
 
+/* Defining the color of span tag */
 h1 .seo {
     color: #d9dcd6;
 }
 
+/* applying the flex box to nav tag*/
 nav {
     display: flex;
     flex-wrap: nowrap;
@@ -45,6 +50,7 @@ p {
     font-size: 16px;
 }
 
+/* defining the size of the image */
 .hero {
     height: 800px;
     width: 100%;
@@ -53,22 +59,26 @@ p {
     background-position: center;
 }
 
+/*  */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* moving the img to the left inside the box */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* moving the img to the right inside the box */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+/* defining a standard style for every box*/
 .boxes{
     margin-bottom: 20px;
     padding: 50px;
@@ -87,6 +97,7 @@ p {
     font-size: 36px;
 }
 
+/* defining a standard style for every box */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -98,6 +109,7 @@ p {
     background-color: #2589bd;
 }
 
+/* defining a margin between every box*/
 .benefit-general {
     margin-bottom: 32px;
     color: #ffffff;
@@ -108,6 +120,7 @@ p {
     text-align: center;
 }
 
+/* img displayed in blocks */
 .benefit-general img {
     display: block;
     margin: 10px auto;
